# mihome-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
scriptable/: MiHomeClient.js  MiHomeCore.js  MiHomeFeed.js  MiHomeInstaller.js  MiHomeSetup.js  MiHomeStats.js  MiHomeWidget.js  README.md
scriptable/tests/: MiHomeClient.test.js  MiHomeCore.test.js  ScriptContexts.test.js
src/mihome_feeder/: __main__.py  auth.py  cli_feed.py  cli_login.py  cli_stats.py  cloud.py  config.py  crypto.py  env.py
tests/: __init__.py  _helpers.py  test_auth.py  test_cli.py  test_cloud.py  test_env.py  test_stats.py
